version/0.12/_sources/api/solver/_autosummary/settings/multiphase_numerics.rst.txt
:orphan:

.. _multiphase_numerics:

multiphase_numerics
===================

.. currentmodule:: ansys.fluent.core.solver.settings_231.multiphase_numerics

.. autoclass:: multiphase_numerics
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

================================================================   =======================================================================

Child                                                                                                                              Summary

================================================================   =======================================================================
:ref:`porous_media <porous_media>`                                                    Multiphase miscellaneous porous media numerics menu.

:ref:`compressible_flow <compressible_flow>`                                                Multiphase compressible numerics options menu.

:ref:`boiling_parameters <boiling_parameters>`                                                         Multiphase boiling parameters menu.

:ref:`viscous_flow <viscous_flow>`                                                          Multiphase viscous flow numerics options menu.

:ref:`heat_mass_transfer <heat_mass_transfer>`                         Multiphase interphase heat and mass transfer numerics options menu.

:ref:`advanced_stability_controls <advanced_stability_controls>`                                   Stability controls for multiphase flow.

:ref:`default_controls <default_controls>`                                                               Multiphase default controls menu.

:ref:`face_pressure_controls <face_pressure_controls>`                                       Enter the face pressure expert controls menu.

:ref:`solution_stabilization <solution_stabilization_1>`                                                  VOF solution stabilization menu.

================================================================   =======================================================================

.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`methods <methods_1>`       'methods' child.

==========================   ====================

