version/0.27/_sources/api/solver/_autosummary/settings/multiphase_numerics.rst.txt
:orphan:

.. _multiphase_numerics:

multiphase_numerics
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.multiphase_numerics
    :show-inheritance:

.. rubric:: Attributes

================================================================   =======================================================================

Attribute                                                                                                                          Summary

================================================================   =======================================================================
:ref:`porous_media <porous_media>`                                                    Multiphase miscellaneous porous media numerics menu.

:ref:`compressible_flow <compressible_flow>`                                                Multiphase compressible numerics options menu.

:ref:`boiling_parameters <boiling_parameters>`                                                         Multiphase boiling parameters menu.

:ref:`viscous_flow <viscous_flow>`                                                          Multiphase viscous flow numerics options menu.

:ref:`heat_mass_transfer <heat_mass_transfer>`                         Multiphase interphase heat and mass transfer numerics options menu.

:ref:`interphase_interactions <interphase_interactions>`                                    Enter the interphase interaction options menu.

:ref:`advanced_stability_controls <advanced_stability_controls>`                                   Stability controls for multiphase flow.

:ref:`default_controls <default_controls>`                                                               Multiphase default controls menu.

:ref:`face_pressure_controls <face_pressure_controls>`                                       Enter the face pressure expert controls menu.

:ref:`solution_stabilization <solution_stabilization>`                                                    VOF solution stabilization menu.

:ref:`energy <energy_1>`                                                                                   Multiphase energy options menu.

================================================================   =======================================================================

.. rubric:: Included in:

============================   ====================================

Parent                                                      Summary

============================   ====================================
:ref:`methods_1 <methods_1>`       Enter the solution methods menu.

============================   ====================================

